--- a/containers/home_assistant/Dockerfile_2
+++ b/containers/home_assistant/Dockerfile_2
@@ -1,5 +1,15 @@
 # Use the previously built Home Assistant image as the base
 FROM home_assistant_image_1:latest
+ARG BUILD_ENV_USERNAME
+ARG BUILD_ENV_UID
+ARG BUILD_ENV_GID 
+ARG BUILD_ENV_GROUPNAME
+
+ENV ENV_USERNAME=$BUILD_ENV_USERNAME
+ENV ENV_UID=$BUILD_ENV_UID
+ENV ENV_GID=$BUILD_ENV_GID 
+ENV ENV_GROUPNAME=$BUILD_ENV_GROUPNAME
+
 
 # Set working directory
 WORKDIR /usr/src/homeassistant
