--- a/containers/home_assistant/Dockerfile_1
+++ b/containers/home_assistant/Dockerfile_1
@@ -9,7 +9,7 @@ ENV ENV_UID=$BUILD_ENV_UID
 ENV ENV_GID=$BUILD_ENV_GID 
 ENV ENV_GROUPNAME=$BUILD_ENV_GROUPNAME
 
-# Install necessary system dependencies including zlib-ng and isal
+# Install necessary system dependencies
 RUN apt-get update && apt-get install -y \
     build-essential \
     libffi-dev \
@@ -18,10 +18,11 @@ RUN apt-get update && apt-get install -y \
     libxml2-dev \
     libxslt1-dev \
     zlib1g-dev \
-    zlib-ng-dev \
-    libisal2-dev \
     git \
+    wget \
     && apt-get clean
+
+RUN apt-get upgrade -y
 
 ####
 
