--- a/containers/home_assistant/Dockerfile_1
+++ b/containers/home_assistant/Dockerfile_1
@@ -38,6 +38,7 @@ RUN mkdir /usr/src/homeassistant
 RUN chown -R ${ENV_UID}:${ENV_GID} /usr/src/homeassistant
 
 RUN mkdir /config
+COPY ./config/configuration.yaml /config/
 RUN chown -R ${ENV_UID}:${ENV_GID} /config
 
 USER ${ENV_UID}:${ENV_GID}
