--- a/containers/home_assistant/Dockerfile_2
+++ b/containers/home_assistant/Dockerfile_2
@@ -14,6 +14,8 @@ ENV ENV_GROUPNAME=$BUILD_ENV_GROUPNAME
 # Set working directory
 WORKDIR /usr/src/homeassistant
 
+RUN ls -lR /config
+
 USER ${ENV_UID}:${ENV_GID}
 
 COPY requirements_2.txt /env/requirements_2.txt
