--- a/containers/home_assistant/Dockerfile_1
+++ b/containers/home_assistant/Dockerfile_1
@@ -38,12 +38,12 @@ RUN mkdir /usr/src/homeassistant
 RUN chown -R ${ENV_UID}:${ENV_GID} /usr/src/homeassistant
 
 RUN mkdir /config
-COPY ./config/configuration.yaml /config/
+## COPY ./config/configuration.yaml /config/
 RUN chown -R ${ENV_UID}:${ENV_GID} /config
 RUN ls -lR /config
 ## the below might have been crucial?
 RUN chmod -R g+rwx /config/
-RUN ls -lR /config
+# RUN ls -lR /config
 
 USER ${ENV_UID}:${ENV_GID}
 
