--- a/containers/home_assistant/Dockerfile_2
+++ b/containers/home_assistant/Dockerfile_2
@@ -21,6 +21,8 @@ USER ${ENV_UID}:${ENV_GID}
 COPY requirements_2.txt /env/requirements_2.txt
 RUN /env/bin/pip3 install -r /env/requirements_2.txt
 
+COPY ./config/configuration.yaml /config/
+
 RUN /env/bin/pip3 freeze
 
 # Expose the default port used by Home Assistant
