--- a/containers/home_assistant/Dockerfile_2
+++ b/containers/home_assistant/Dockerfile_2
@@ -1,31 +1,32 @@
 # Use the previously built Home Assistant image as the base
 FROM home_assistant_image_1:latest
+
 ARG BUILD_ENV_USERNAME
 ARG BUILD_ENV_UID
-ARG BUILD_ENV_GID 
+ARG BUILD_ENV_GID
 ARG BUILD_ENV_GROUPNAME
 
 ENV ENV_USERNAME=$BUILD_ENV_USERNAME
 ENV ENV_UID=$BUILD_ENV_UID
-ENV ENV_GID=$BUILD_ENV_GID 
+ENV ENV_GID=$BUILD_ENV_GID
 ENV ENV_GROUPNAME=$BUILD_ENV_GROUPNAME
-
 
 # Set working directory
 WORKDIR /usr/src/homeassistant
 
-RUN ls -lR /config
-
+# Copy the configuration and set the correct ownership
 COPY ./config/configuration.yaml /config/
-RUN chown ENV_UID:ENV_GID /config/configuration.yaml
+RUN chown ${ENV_UID}:${ENV_GID} /config/configuration.yaml
 
+# Switch to the user with provided UID and GID
 USER ${ENV_UID}:${ENV_GID}
 
+# Copy requirements and install them
 COPY requirements_2.txt /env/requirements_2.txt
+RUN chown ${ENV_UID}:${ENV_GID} /env/requirements_2.txt
 RUN /env/bin/pip3 install -r /env/requirements_2.txt
 
-
-
+# Verify installed packages
 RUN /env/bin/pip3 freeze
 
 # Expose the default port used by Home Assistant
