--- a/containers/home_assistant/Dockerfile_2
+++ b/containers/home_assistant/Dockerfile_2
@@ -14,6 +14,9 @@ ENV ENV_GROUPNAME=$BUILD_ENV_GROUPNAME
 # Set working directory
 WORKDIR /usr/src/homeassistant
 
+RUN mkdir -p /test
+RUN chown -R ${ENV_UID}:${ENV_GID} /test
+
 # Copy the configuration and set the correct ownership
 COPY ./config/configuration.yaml /config/
 RUN chown ${ENV_UID}:${ENV_GID} /config/configuration.yaml
