--- a/containers/home_assistant/Dockerfile_2
+++ b/containers/home_assistant/Dockerfile_2
@@ -16,6 +16,8 @@ WORKDIR /usr/src/homeassistant
 
 RUN mkdir -p /test
 RUN chown -R ${ENV_UID}:${ENV_GID} /test
+RUN chmod -R g+rwx /test/
+RUN chmod g+s /test
 
 # Copy the configuration and set the correct ownership
 COPY ./config/configuration.yaml /config/
