--- a/containers/volume/Dockerfile
+++ b/containers/volume/Dockerfile
@@ -19,14 +19,19 @@ WORKDIR /app
 # Create the directory for the volume and set appropriate permissions
 RUN mkdir -p /data && chown -R 1000:1000 /data
 
-# Switch to the non-root user
-USER pi5ha
+# Create the directory for the volume and set appropriate permissions
+RUN chown -R 1000:1000 /app
 
 # Copy the startup script into the container
 COPY startup.sh /app/startup.sh
 
 # Make the script executable
 RUN chmod +x /app/startup.sh
+
+RUN chown 1000:1000 /app/startup.sh
+
+# Switch to the non-root user
+USER pi5ha
 
 # Command to run the script on container startup
 CMD ["/app/startup.sh"]
