--- a/containers/home_assistant/Dockerfile_2
+++ b/containers/home_assistant/Dockerfile_2
@@ -11,6 +11,8 @@ ENV ENV_UID=$BUILD_ENV_UID
 ENV ENV_GID=$BUILD_ENV_GID
 ENV ENV_GROUPNAME=$BUILD_ENV_GROUPNAME
 
+USER $ENV_UID:$ENV_GID
+
 # Set working directory
 WORKDIR /usr/src/homeassistant
 
