--- a/containers/home_assistant/Dockerfile_2
+++ b/containers/home_assistant/Dockerfile_2
@@ -41,6 +41,8 @@ RUN /env/bin/pip3 install -r /env/requirements_2.txt
 # Verify installed packages
 RUN /env/bin/pip3 freeze
 
+VOLUME['/test']
+
 # Expose the default port used by Home Assistant
 EXPOSE 8123
 
