--- a/containers/home_assistant/Dockerfile_1
+++ b/containers/home_assistant/Dockerfile_1
@@ -11,18 +11,38 @@ ENV ENV_GROUPNAME=$BUILD_ENV_GROUPNAME
 
 USER root
 
-# Install necessary system dependencies
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
+    python3-dev \
     build-essential \
     libffi-dev \
     libssl-dev \
-    libyaml-dev \
-    libxml2-dev \
-    libxslt1-dev \
     zlib1g-dev \
-    git \
+    libjpeg-dev \
+    libturbojpeg0-dev \
+    libopenjp2-7-dev \
+    libtiff-dev \
+    libcurl4-openssl-dev \
+    ffmpeg \
+    libavformat-dev \
+    libavcodec-dev \
+    libavutil-dev \
+    libsqlite3-dev \
+    bluez \
+    libbluetooth-dev \
+    udev \
+    libpcap-dev \
+    iputils-ping \
+    tzdata \
+    curl \
     wget \
-    && apt-get clean
+    libxslt-dev \
+    libxml2-dev \
+    mariadb-dev \
+    postgresql-dev \
+    libisal-dev \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 RUN apt-get upgrade -y
 
