--- a/containers/home_assistant/requirements_2.txt
+++ b/containers/home_assistant/requirements_2.txt
@@ -2,4 +2,8 @@ pandas
 numpy
 wheel
 PyTurboJPEG
+Brotli==1.1.0
+faust-cchardet==2.1.19
+mysqlclient==2.2.6
+psycopg2==2.9.10
 homeassistant==2024.12.0
