--- a/containers/home_assistant/Dockerfile_1
+++ b/containers/home_assistant/Dockerfile_1
@@ -21,11 +21,11 @@ RUN groupadd --gid ${ENV_GID} ${ENV_GROUPNAME}
 RUN echo useradd --uid ${ENV_UID} --gid ${ENV_GID} -m ${ENV_USERNAME}
 RUN useradd --uid ${ENV_UID} --gid ${ENV_GID} -m ${ENV_USERNAME}
 
-RUN mkdir /env
-RUN chown -R ${ENV_UID}:${ENV_GID} /env
+#RUN mkdir /env
+#RUN chown -R ${ENV_UID}:${ENV_GID} /env
 
-RUN mkdir /usr/src/homeassistant
-RUN chown -R ${ENV_UID}:${ENV_GID} /usr/src/homeassistant
+#RUN mkdir /usr/src/homeassistant
+#RUN chown -R ${ENV_UID}:${ENV_GID} /usr/src/homeassistant
 
 RUN mkdir /config
 ## COPY ./config/configuration.yaml /config/
