--- a/matter/docker/Dockerfile
+++ b/matter/docker/Dockerfile
@@ -24,11 +24,13 @@ RUN apt-get update && apt-get install -y \
     build-essential \
     && apt-get clean
 
+RUN python -m pip install --upgrade pip==22.3.1 setuptools==65.5.1
+
 # Upgrade pip and setuptools
-RUN pip3 install --upgrade pip setuptools
+RUN pip install --upgrade pip setuptools
 
 # Install Python dependencies for Matter
-RUN pip3 install pycryptodome cryptography chip-device-ctrl
+RUN pip install pycryptodome cryptography chip-device-ctrl
 
 # Clone ESP-Matter repository
 RUN git clone --recursive https://github.com/espressif/esp-matter.git /opt/esp/esp-matter
