--- a/matter/docker/Dockerfile
+++ b/matter/docker/Dockerfile
@@ -24,7 +24,7 @@ RUN apt-get update && apt-get install -y \
     build-essential \
     && apt-get clean
 
-RUN python -m pip install --upgrade pip==22.3.1 setuptools==65.5.1
+RUN python3 -m pip install --upgrade pip==22.3.1 setuptools==65.5.1
 
 # Upgrade pip and setuptools
 RUN pip install --upgrade pip setuptools
